Closed Bug 122996 Opened 24 years ago Closed 24 years ago

Poor Scroll Performance (Not CSS Related)

Categories

(Core Graveyard :: GFX, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: murphye, Assigned: dcone)

References

()

Details

(4 keywords, Whiteboard: [top 100])

Attachments

(5 files)

This is probably a dupe somehow, but I couldn't find anything. Anyway, I did this site design a while back, and Moz has always choked on it. There is nothing special here, only CSS hover for the links. Then regular HTML. Maybe someone knows offhand what is causing this. When I scroll, 100% CPU is beeing eaten up.
Keywords: perf
Attached image bk.gif
bk.gif
Attached file bk.html
OK, I found the problem. It's the background image making things so slow (duh). It's only a couple pixels tall, and very wide. Basically, it's being repeated on the page thousands of times.
Keywords: testcase
Over to compositor... we have bugs on this already.
Assignee: asa → kmcclusk
Component: Browser-General → Compositor
QA Contact: doronr → petersen
Whiteboard: DUPEME
Reassigning to Don.
Assignee: kmcclusk → dcone
Target Milestone: --- → mozilla1.0
Marking nsbeta1+
Keywords: nsbeta1+
*** Bug 121089 has been marked as a duplicate of this bug. ***
*** Bug 99924 has been marked as a duplicate of this bug. ***
Attached file testcase
with this testcase I don't see 100% CPU usage with build 2002020603 win32 on w2k otoh the URLs at bug 99924 and bug 121089 I see 100% CPU usage (probably due to larger images)
bug 102321 sounds related to this
Blocks: 100951
I'm getting really slow and jerky scroll performance (80%CPU, the rest to window manager) on any page. With or without CSS or a background image. Build: ID 2002020516, Mac OSX CFM. This was not an issue with 0.9.7.
Whiteboard: DUPEME
Keywords: regression
Target Milestone: mozilla1.0 → mozilla0.9.9
Comment on attachment 69722 [details] [diff] [review] Patch to use PatBlt.. again. sr=attinasi
Attachment #69722 - Flags: superreview+
Comment on attachment 69722 [details] [diff] [review] Patch to use PatBlt.. again. r=kmcclusk@netscape.com
Attachment #69722 - Flags: review+
I checked in the Patblt code. I tested on Win2k, Win98, Win95 and Winnt. I had machines run this from 400 mhz to 1500 mhz. The Patblt should speed things up.. but I never really saw the chuncky behavior described. Hopefully this should fix that.
Fixed
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Don, did you test with just viewer or with mozilla as well? People are reporting that backgrounds are not painting in XUL using the modern theme starting with 2/19 builds. If you look at the screen shot in bug 126594, you'll see that all the images failing to paint are backgrounds. I'm pretty sure this change is at the root of 126594, as this only happens on Win98 according to reporters. I don't have a Win98 box I can test backing this change out on, can someone else with Win98 try this?
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Blocks: 126594
Windows 98 PatBlt only supports brush sizes 8x8 and greater.. so I change the test from && to an || for the test. I tested on windows 98 and the modern skin works now.
Comment on attachment 71008 [details] [diff] [review] very small patch to fix windows 98 PatBlt quirck r=karnaze
Attachment #71008 - Flags: review+
Comment on attachment 71008 [details] [diff] [review] very small patch to fix windows 98 PatBlt quirck sr=attinasi
Attachment #71008 - Flags: review+ → superreview+
*** Bug 126594 has been marked as a duplicate of this bug. ***
a=asa (on behalf of drivers) for checkin to 0.9.9
Keywords: mozilla0.9.9+
*** Bug 127543 has been marked as a duplicate of this bug. ***
Checked in fix.
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
No longer blocks: 126594
What build is this fix in? Bug 127543 (marked as a dupe of this) is still showing up for me in build 2002022503 in Win98.
This also completely fails for me on Windows 95 which only permits 8x8 pattern brushes. A useful workaround would be if the image is a power of two it could be manually tiled up to the 8x8 size.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I'm curious if y'all think this bug fix is what cured the problem on this site: 1. go to http://www.astrology.com 2. enter a date for the Free Sample Personal Astrology Profile then Submit. 3. scroll the page with the forms. Then try typing in the fields. Result: In 9.4 scrolls choppily and has a major delay from when you type in the fields until the letters actually appear. In Gecko/20020222 and Gecko/20020226 2/22 it scrolls (pretty) smoothly and text entry is as expected.
fixed.. I backed out the pattern blit. Also.. for future reference.. window 95 will not be supported.. so the PatBlt would stay in if it just crashed on windows 95. To answer Susie's question.. there has been alot of work done on backgrounds and loading images.. so I am sure that one of those fixes or this.. fixed the problem you experienced.
Resolving fixed based on comment #30
The problem reported in this bug has been fixed. If there is another site which is experiencing problems with scrolling performance please open a new bug. Resolving as FIXED.
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
I note this is closed, but comment #30 worries me: Win95 is "not supported", and something that would crash on Win95 (often) would be left in? There are a lot of Win95 machines out there. Yes, I know MS has EOL'd Win95. Has there been an executive decision to not support Win95?
Marking topembed -- critical to embedding. Top 100 site, AOL partner In 0.9.4 the home page and page you get to upon entering a birthdate for a Personal Profile scroll painfully slowly. I'm hoping this is the bug that's fixed the problem in 0.9.8. If you try it and think it's a different, fixed bug please tell me. http://www.astrology.com/
Keywords: topembed
Whiteboard: [top 100]
Marking verified in the April 24th build (2002-04-23-06) build under Windows ME.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: