b=122996 r=kmclusky sr=attinasi.  Use patblt for windows background tiling